# insider-python

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/demo_django/: README.md  manage.py
examples/demo_django/demo_django/: settings.py  urls.py
examples/demo_django/demoapp/: apps.py  views.py
src/insider/: __init__.py  _envelope.py  _footprint.py  _version.py  client.py  dsn.py  paths.py  privacy.py  safety.py  scope.py  scrubbing.py  stacktrace.py  transport.py
src/insider/contrib/django/: __init__.py  apps.py  middleware.py
src/insider/integrations/: __init__.py
src/insider/integrations/django/: __init__.py  _client_ctx.py  asgi.py  capture.py  drf.py  handler.py  perf.py  request.py  signals.py  wsgi.py
src/insider/integrations/logging/: __init__.py  handler.py  levels.py
tests/: asgi_helpers.py  conftest.py  deferred_user_middleware.py  django_drf_urls.py  django_integration_urls.py  django_settings.py  django_urls.py  test_asgi_integration.py  test_capture.py  test_capture_log.py  test_capture_perf.py  test_django.py  test_django_integration.py  test_drf_integration.py  test_dsn.py  test_envelope.py  test_logging_integration.py  test_never_crash.py  test_privacy.py  test_safety.py  test_scrubbing.py  test_stacktrace.py  test_transport.py
