[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insider-python"
version = "0.1.6"
description = "Python SDK for Insider — ship Beacons to your Insider server."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Insider" }]
keywords = ["insider", "telemetry", "errors", "monitoring", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "urllib3>=1.26",
]

[project.optional-dependencies]
django = ["django>=4.2"]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
    "django>=4.2",
    "djangorestframework>=3.14",
]

[project.urls]
Homepage = "https://github.com/Insider-Inc/insider-python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
insider = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = ["ignore::DeprecationWarning"]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
django_find_project = false
